--- a/integration/Dockerfiles/hub/Dockerfile
+++ b/integration/Dockerfiles/hub/Dockerfile
@@ -1,7 +1,7 @@
 # build
 FROM index.docker.io/library/debian:latest
 MAINTAINER qinka
-RUN apt update && apt install -y libgmp10 python3
+RUN apt update && apt install -y libgmp10 python
 ADD bin /usr/bin
 COPY entrypoint.py entrypoint
 ENTRYPOINT ["/entrypoint"]
