--- a/glob-auth/glob-auth.cabal
+++ b/glob-auth/glob-auth.cabal
@@ -3,23 +3,38 @@
 
 name:                glob-auth
 version:             0.2
-synopsis:            The authentication.
--- description:         
-homepage:            https://github/.
+synopsis:            For authentication.
+description:         For authentication
+homepage:            https://github/Qinka/Glob
 license:             Agasa
 license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
--- copyright:           
--- category:            
+copyright:           Copyleft 2017 Qinka <qinka@live.com>        
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
+cabal-version:       >=1.20
+
+flag without-yesod
+     default: False
+     description: When installing to client, for tools, Yesod is not necessary.
 
 library
-  -- exposed-modules:     
-  -- other-modules:       
-  -- other-extensions:    
+  exposed-modules:     Glob.Auth
+  other-modules:       Glob.Auth.Internal
+  default-extensions:  OverloadedStrings
+                       TemplateHaskell
+                       CPP   
   build-depends:       base >=4.9 && <4.10
+                     , glob-common == 0.2.*
+                     , cryptonite >= 0.20
+                     , base64-bytestring > 1
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+  if flag(without-yesod)
+     cc-options:      -DWITHOUT_YESOD
+  else
+     other-modules:    Glob.Auth.Types
+     build-depends:    wai >= 3.2
+                     , yesod-core >= 1.4
