--- a/glob-auth/glob-auth.cabal
+++ b/glob-auth/glob-auth.cabal
@@ -28,6 +28,7 @@ library
                      , glob-common == 0.2.*
                      , cryptonite >= 0.20
                      , base64-bytestring > 1
+                     , HTTP > 4000.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -41,13 +42,14 @@ library
 test-suite test-core
   type:           exitcode-stdio-1.0
   main-is:        test-core.hs
-  hs-source-dirs: test.src/core
+  hs-source-dirs: test/core
   default-language: Haskell2010
   build-depends:  base
                 , random
                 , MonadRandom
                 , glob-common == 0.2.*
                 , glob-auth   == 0.2.*
+                , HTTP > 4000.3
 
                  
 test-suite test-auth
@@ -59,7 +61,7 @@ test-suite test-auth
   main-is: Spec.hs
   other-modules: TestImport
                  AuthSpec
-  hs-source-dirs: test.src/auth
+  hs-source-dirs: test/auth
   default-language: Haskell2010
   default-extensions: OverloadedStrings
                       TemplateHaskell
@@ -73,3 +75,4 @@ test-suite test-auth
                , directory
                , hspec >= 2
                , cryptonite
+               , HTTP > 4000.3
