--- a/glob-common/glob-common.cabal
+++ b/glob-common/glob-common.cabal
@@ -21,12 +21,17 @@ library
                      Glob.Import.ByteString
                      Glob.Import.ByteString.Lazy
                      Glob.Import.Text
-  -- other-modules:       
+                     Glob.Import.TH
+                     Glob.Import.Version
+                     Glob.Common.Info
+  other-modules:     Paths_glob_common
   -- default-extensions:    
   build-depends:       base >=4.9 && <4.10
                      , aeson >= 1.0
                      , bytestring > 0.10
                      , text >= 1.2
                      , time >= 1.6
+                     , template-haskell >= 2.11
+                     , gitrev >= 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
