--- a/glob-utils/glob-utils.cabal
+++ b/glob-utils/glob-utils.cabal
@@ -13,7 +13,11 @@ copyright:           (C) 2017 Qinka(qinka@live.com)
 -- category:            
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
+cabal-version:       >=1.22
+                                    
+flag client
+     description: For client, disable some function about server.
+     default: False
 
 library
   exposed-modules:     Glob.Import
@@ -24,7 +28,6 @@ library
                        Glob.Import.TH
                        Glob.Import.Version
                        Glob.Utils.Info
-   
   other-modules:       Paths_glob_utils
   -- other-extensions:    
   build-depends:       base >=4.9 && <4.10
@@ -34,5 +37,11 @@ library
                      , time >= 1.6
                      , template-haskell >= 2.11
                      , gitrev >= 1.2
+                     , shakespeare >= 2.0.13
   hs-source-dirs:      src
   default-language:    Haskell2010
+  if !flag(client)
+     exposed-modules:  Glob.Utils.Handler
+     build-depends:    yesod-core >= 1.4.30
+     reexported-modules: Yesod.Core
+     other-extensions: OverloadedStrings
