--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -19,33 +19,10 @@ flag debug-info
      default: False
 
                      
-library
-  exposed-modules:     Glob.Common
-                       Glob.Common.Infos
-                       Glob.Core
-                       Glob.Model
-  other-modules:       Glob.Config
-                       Glob.Foundation
-                       Glob.Handler
-                       Glob.Handler.Fetch
-                       Glob.Handler.Internal
-                       Glob.Handler.Query
-                       Glob.Handler.Query.Parser
-                       Glob.Types
-                       Import
-                       Import.ByteStringUtf8
-                       Import.Logger
-                       Import.Text
-                       Import.TH
-                       Import.Wai
-                       Paths_glob_core
-  default-extensions:  FlexibleContexts
-                       OverloadedStrings
-                       QuasiQuotes
-                       RecordWildCards
-                       TypeFamilies
-                       TemplateHaskell
-                       ViewPatterns
+library 
+  exposed-modules:     Glob.Core.Model.Internal
+                       Glob.Core.Model.TH
+  
   build-depends:       aeson >= 0.10
                      , base >= 4.7 && < 4.10
                      , base64-bytestring >= 1.0.0.0
@@ -77,8 +54,8 @@ library
                      , warp >= 3.2.7
                      , xml-hamlet >= 0.4.0.10
                      , yesod-core >= 1.4.20
-  hs-source-dirs:      lib
-                       import
+                     , glob-utils == 0.1.5.*
+  hs-source-dirs:      src
   default-language:    Haskell2010
   if flag(debug-info)
       cpp-options: "-DDEBUG"
