--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -24,6 +24,7 @@ library
                        Glob.Core.Model.TH
                        Glob.Core.Model
                        Glob.Core.View.Internal
+                       Glob.Core.View
   
   build-depends:       aeson >= 0.10
                      , base >= 4.7 && < 4.10
