--- a/glob-utils/glob-utils.cabal
+++ b/glob-utils/glob-utils.cabal
@@ -68,4 +68,5 @@ library
                        , Database.MongoDB
                        , Control.Monad.Trans.Control
                        , Control.Monad.Writer.Lazy
+                       , Text.Parsec
      other-extensions: OverloadedStrings
