--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -26,38 +26,9 @@ library
                        Glob.Core.View.Internal
                        Glob.Core.View
   
-  build-depends:       aeson >= 0.10
-                     , base >= 4.7 && < 4.10
-                     , base64-bytestring >= 1.0.0.0
-                     , blaze-markup >= 0.7
-                     , blaze-html >= 0.8.1
-                     , bytestring >= 0.10.8
-                     , cmdargs >= 0.10.10
-                     , conduit >= 1.2.6
-                     , cryptonite >= 0.21
-                     , directory >= 1.2.6
-                     , fast-logger >= 2.4
-                     , gitrev >= 1.2
-                     , http-date >= 0.0.6
-                     , http-types >= 0.9.1
-                     , monad-control >= 1.0.1
-                     , monad-logger >= 0.3.19
-                     , mongoDB >= 2.1
-                     , network >= 2.6.2
-                     , parsec >= 3.1.10
-                     , resource-pool >= 0.2.3
-                     , shakespeare >= 2.0.9
-                     , signal >=0.1.0.3
-                     , time >= 1.6
-                     , text >= 1.2
-                     , template-haskell >= 2.11
-                     , transformers >= 0.5.2
-                     , wai >= 3.2
-                     , wai-logger >= 2.3
-                     , warp >= 3.2.7
-                     , xml-hamlet >= 0.4.0.10
-                     , yesod-core >= 1.4.20
+  build-depends:       base >= 4.7 && < 5
                      , glob-utils == 0.1.5.*
+                     , glob-auth  == 0.1.5.*
   hs-source-dirs:      src
   default-language:    Haskell2010
   if flag(debug-info)
