--- a/glob-utils/glob-utils.cabal
+++ b/glob-utils/glob-utils.cabal
@@ -39,7 +39,6 @@ library
                      , gitrev >= 1.2
                      , cmdargs >= 0.10
                      , signal >=0.1.0.3
-                     
   hs-source-dirs:      src
   default-language:    Haskell2010
   if !flag(client)
@@ -62,6 +61,7 @@ library
                      , warp >= 3.2.7
                      , xml-hamlet >= 0.4.0.10
                      , mtl >= 2.2
+                     , http-types >= 0.9
                      
      reexported-modules: Yesod.Core
                        , Yesod.Core.Handler
@@ -69,4 +69,9 @@ library
                        , Control.Monad.Trans.Control
                        , Control.Monad.Writer.Lazy
                        , Text.Parsec
+                       , Network.HTTP.Types
+                       , Data.Pool
+                       , Text.Blaze.Html
+                       , Yesod.Core.Json
+                       , Yesod.Core.Widget
      other-extensions: OverloadedStrings
