--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,12 @@
 # Glob's stack yaml
-resolver: lts-8.20
+resolver: lts-9.0
 
 packages:
 - glob-auth
 - glob-utils
 - glob-core
 - glob-launch/
+- glob-tool
 # - glob-tools/glob-ih/
 # - glob-tools/glob-timecheck/
 # - glob-tools/glob-update/
