--- a/glob-tool/glob-tool.cabal
+++ b/glob-tool/glob-tool.cabal
@@ -17,11 +17,15 @@ cabal-version:       >=1.10
 
 executable glob
   main-is:             Main.hs
-  -- other-modules:       
+  other-modules:       Glob.Tool.Opt
+                       Glob.Tool.Ih
   -- other-extensions:    
   build-depends:       base >=4.9 && < 5
                      , glob-utils
                      , glob-auth
                      , cmdargs
+                     , directory
+                     , echo
+                     , makefile
   hs-source-dirs:      src
   default-language:    Haskell2010
