--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -2,13 +2,14 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-core
-version:             0.1.0.50
+version:             0.1.0.51
 synopsis:            The core of the glob.
 description:         Just a small blog backend.
+license:             GLP-3
 license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
-copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
+copyright:           Copyright 2016-2017 Qinka <qinka@live.com>
 category:            Web
 build-type:          Simple
 extra-source-files:  ChangeLog.md
