--- a/glob-tools/glob-update/glob-update.cabal
+++ b/glob-tools/glob-update/glob-update.cabal
@@ -2,13 +2,14 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-update
-version:             0.1.0.50
+version:             0.1.0.61
 synopsis:            A tool used to update.
 description:         A tool which can create the Makefile.
+license:             GPL-3
 license-file:        LICENSE
 author:              Qinka
 maintainer:          Qinka <qinka@live.com>
-copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
+copyright:           Copyright 2016-2017 Qinka <qinka@live.com>
 build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
