--- a/glob-tools/glob-timecheck/glob-timecheck.cabal
+++ b/glob-tools/glob-timecheck/glob-timecheck.cabal
@@ -2,9 +2,10 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-timecheck
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            a serial tool of glob
 description:         the tool transform tokens and other things to curl's options
+license:             GPL-3
 license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
