--- a/glob-auth/glob-auth.cabal
+++ b/glob-auth/glob-auth.cabal
@@ -1,8 +1,10 @@
+-- glob-auth
+-- Gy
+        
 name:                glob-auth
-
-version:             0.1.5.0
--- synopsis:            
--- description:         
+version:             0.1.5.10
+synopsis:            authentication for glob
+description:         The authentication for glob to help identify the admin
 license:             GPL-3
 license-file:        LICENSE
 author:              Qinka
@@ -11,7 +13,7 @@ copyright:           Copyright 2017 Qinka
 category:            Web
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
+cabal-version:       >= 1.10
                      
 flag client
      description: For client, disable some function about server.
@@ -29,7 +31,9 @@ library
   default-language:    Haskell2010
   if !flag(client)
      exposed-modules: Glob.Auth
-     -- build-depends:   yesod-core >= 1.4.30
+     other-extensions: FunctionalDependencies
+                       MultiParamTypeClasses
+                       OverloadedStrings
   
 test-suite test-core
   type:              exitcode-stdio-1.0
@@ -61,3 +65,12 @@ test-suite test-auth
                    , yesod-test >= 1.5
                    , yesod-core >= 1.4.30
                    , wai >= 3.2
+
+
+
+                   
+source-repository head
+  type: git
+  location: https://github.com/Qinka/Glob.git
+  subdir: glob-auth
+  branch: 0.1.5/dev
