--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -40,6 +40,19 @@ library
                        TemplateHaskell
                        TypeFamilies
 
+test-suite spec
+  type:             exitcode-stdio-1.0
+  main-is:          Spec.hs
+  hs-source-dirs:   test
+  build-depends:    base >= 4 && < 5
+                  , hspec
+                  , glob-utils
+                  , glob-core
+  other-modules:    ModelSpec
+                    Internal
+  default-language: Haskell2010
+  ghc-options:      -Wno-missing-fields
+                       
 source-repository head
   type: git
   location: https://github.com/Qinka/Glob.git
