--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -40,7 +40,7 @@ library
                        TemplateHaskell
                        TypeFamilies
 
-test-suite spec
+test-suite test-mvc
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
   hs-source-dirs:   test
