--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -48,6 +48,7 @@ test-suite test-mvc
                   , hspec
                   , glob-utils
                   , glob-core
+                  , blaze-markup
   other-modules:    ModelSpec
                     Internal
   default-language: Haskell2010
